--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
